--- a/Move.toml
+++ b/Move.toml
@@ -1,6 +1,6 @@
 [package]
-name = "harvest_fa"
-version = "1.1.0"
+name = "harvest_fa1"
+version = "1.2.0"
 authors = []
 
 [addresses]
@@ -19,3 +19,8 @@ git = "https://github.com/aptos-labs/aptos-core.git"
 rev = "mainnet"
 subdir = "aptos-move/framework/aptos-token"
 
+
+[dependencies.AptosTokenObjects]
+git = "https://github.com/aptos-labs/aptos-framework.git"
+rev = "mainnet"
+subdir = "aptos-token-objects"
